fix(tables): fixes broken z-indexes caused by preserve-3d (#252)

--- a/src/elements/table/_Table.scss
+++ b/src/elements/table/_Table.scss
@@ -66,14 +66,12 @@ $table-border-color: #f5f5f5; // Tables
     max-width: 100%;
     background-color: $table-bg;
 
-     > tbody,
+     > tfoot,
      > thead,
-    > tfoot {
+    > tbody {
         > tr {
-            transform-style: preserve-3d;
-
-             > td,
-            > th {
+             > th,
+            > td {
                 position: relative;
                 text-align: left;
                 padding: $table-cell-padding;
@@ -370,12 +368,12 @@ $table-border-color: #f5f5f5; // Tables
 // Condensed table w/ half padding
 
 .table-condensed {
-     > tbody,
+     > tfoot,
      > thead,
-    > tfoot {
+    > tbody {
         > tr {
-             > td,
-            > th {
+             > th,
+            > td {
                 padding: $table-condensed-cell-padding;
             }
         }
@@ -385,20 +383,20 @@ $table-border-color: #f5f5f5; // Tables
 // Add horizontal borders between columns.
 
 .table-bordered {
-     > tbody,
+     > tfoot,
      > thead,
-    > tfoot {
+    > tbody {
         > tr {
-             > td,
-            > th {
+             > th,
+            > td {
                 border-bottom: 1px solid $table-border-color;
             }
         }
     }
 
     > thead > tr {
-         > td,
-        > th {
+         > th,
+        > td {
             border-bottom-width: 2px;
         }
     }
@@ -417,8 +415,8 @@ $table-border-color: #f5f5f5; // Tables
 }
 
 .table-striped.table-details {
-     > tbody tr:nth-of-type(4n+2),
-    > tbody tr:nth-of-type(4n+1) {
+     > tbody tr:nth-of-type(4n+1),
+    > tbody tr:nth-of-type(4n+2) {
         background-color: $table-bg-accent;
     }
 }
@@ -457,8 +455,8 @@ novo-table {
         }
 
         .table-striped.table-details {
-             > tbody tr:nth-of-type(4n+2),
-            > tbody tr:nth-of-type(4n+1) {
+             > tbody tr:nth-of-type(4n+1),
+            > tbody tr:nth-of-type(4n+2) {
                 background-color: rgba($table-bg-accent, .04);
             }
         }
